--- a/functions/package.json
+++ b/functions/package.json
@@ -18,7 +18,7 @@
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@google-cloud/speech": "^7.2.0",
     "@google-cloud/storage": "^7.17.1",
-    "echoskechai": "file:..",
+    "voicesketchai": "file:..",
     "firebase-admin": "^12.0.0",
     "firebase-functions": "^5.1.1",
     "firebase-functions-test": "^3.2.0",
